--- a/ARCoreLocationLesson/Base.lproj/Main.storyboard
+++ b/ARCoreLocationLesson/Base.lproj/Main.storyboard
@@ -25,6 +25,22 @@
             </objects>
             <point key="canvasLocation" x="676.81159420289862" y="107.8125"/>
         </scene>
+        <!--Account-->
+        <scene sceneID="2Sx-0l-Gwc">
+            <objects>
+                <viewController id="rTE-p7-SZB" customClass="AccountViewController" customModule="ARCoreLocationLesson" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Nyt-bP-xYX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="5wb-3p-qOl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Account" image="person" catalog="system" id="uiW-9K-UZb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YEx-S5-dJi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-233" y="838"/>
+        </scene>
         <!--locomi-->
         <scene sceneID="Zq7-ZG-DIP">
             <objects>
@@ -54,6 +70,7 @@
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="a8J-ce-y5B"/>
                         <segue destination="AM3-45-FE8" kind="relationship" relationship="viewControllers" id="XfT-Gl-9pa"/>
+                        <segue destination="rTE-p7-SZB" kind="relationship" relationship="viewControllers" id="rFl-6A-o7E"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GgF-cr-9ZW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -64,6 +81,7 @@
     <resources>
         <image name="camera.viewfinder" catalog="system" width="128" height="115"/>
         <image name="mappin.and.ellipse" catalog="system" width="118" height="128"/>
+        <image name="person" catalog="system" width="128" height="117"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
